# Paths

./: Capture système depuis 2025-10-10 14:11:48.syscap  Capture système depuis 2025-10-10 14:12:42.syscap  README.md  dev.louiscouture.path.json  meson.build
data/: dev.louiscouture.path.desktop.in  dev.louiscouture.path.gschema.xml  dev.louiscouture.path.metainfo.xml.in  dev.louiscouture.path.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
repo/: summary  summary.idx
repo/refs/heads/app/dev.louiscouture.path/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/screenshots/: x86_64
repo/summaries/: 5353acf497de0583e28cbd945beed3580607ba606a948c6db7b5c75e0cfbe691-61fd7b72e8c3e4fb1a465a2c4fbe78465712e7d578595b3a4e8772eb397b450f.delta  5e900f69238ce0a3237a7310fa6737437657d744c440ee7f3f7b701ef890d537-61fd7b72e8c3e4fb1a465a2c4fbe78465712e7d578595b3a4e8772eb397b450f.delta  7c0f036a60e174818ce85ead5f838e8f021707724c3699afd06d7cc62be0ce4c-61fd7b72e8c3e4fb1a465a2c4fbe78465712e7d578595b3a4e8772eb397b450f.delta  c203e24a4482fdd3aec7c625989749cfda9b075295101aa50dc0adfde2e8b7f8-61fd7b72e8c3e4fb1a465a2c4fbe78465712e7d578595b3a4e8772eb397b450f.delta
src/: AppState.c  AppState.h  alias_manager.c  fileManagement.c  main.c  meson.build  pathManager.c  paths3-application.c  paths3-application.h  paths3-window.c  paths3-window.h  paths3-window.ui  paths3.gresource.xml  paths_app_section.c
src/alias/: alias_app_section.c  alias_manager.c
src/paths/: pathManager.c  paths_app_section.c
(+1 files in other folders)
